test_src/compiler_errors/types/binary/OrFloatError1.b
class OrFloatError1 {
    void test() {
        println(14.0f | 42);
    }
}
